<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StreamlineLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_reminder">+ Create New Reminder +</string>
    <string name="deadline">DeadLine</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="groups">Groups</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="all_reminder">All Reminder</string>
    <string name="completes">Completes</string>
    <string name="deadlines">Deadlines</string>
    <string name="calender_view">Calender View</string>
    <string name="setting">Setting</string>
    <string name="navigation_open">Navigation open</string>
    <string name="navigation_close">Navigation close</string>
    <string name="reminder_title_field_hint">Add Title</string>
    <string name="create_reminder_fragment_title">Create Reminder</string>
    <string name="reminder_description_field_hint">Add Description</string>
    <string name="reminder_date_time_field_hint">Add date and time</string>
    <string name="reminder_location_field_hint">Add Location</string>
    <string name="add_priority">Add Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="remind_me">Reminde me every</string>
    <string name="sort_by">sort by</string>
    <string name="add_reminder">add reminder</string>
    <string name="delete">delete</string>
    <string name="save_reminder">save</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="group_name_field_hint">Add name</string>
    <string name="repeat_days">Repeat Days</string>
    <string name="add_group_name">Add Group Name</string>
    <string name="notification">Notification</string>
    <string name="add_location">Add Location</string>
    <string name="edit">Edit</string>
    <string name="sound">Sound</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hide_calender_view">Hide Calender View</string>
    <string name="submit">Submit</string>
    <string name="feedback">FeedBack\nMakes App More Nice</string>
    <string name="pick_color_gor_group">Pick Color gor group</string>
    <string name="your_group_color_is">Your group color is:</string>
    <string name="pick_icon_for_group">Pick Icon for Group</string>
    <string name="pick_icon_for_color">Pick Icon for Color</string>
    <string name="back">back</string>
    <string name="Reminders">Reminders</string>
    <string name="reminder_image">Reminder Image</string>
    <string name="Ascending">Ascending</string>
    <string name="Descending">Descending</string>
    <string name="Low">Low</string>
    <string name="high">High</string>
    <string name="Earliest">Earliest</string>
    <string name="Lastest">Lastest</string>
    <string name="Oldest">Oldest</string>
    <string name="Newest">Newest</string>
    <string name="title">Title</string>
    <string name="Priorities">Priorities</string>
    <string name="DueDate">Due Date</string>
    <string name="CreatedDate">Created Date</string>

    <string-array name="reminder_importance">
        <item>High</item>
        <item>Low</item>
        <item>Medium</item>
    </string-array>

    <string-array name="reminder_occurrence">
        <item>5 Mins</item>
        <item>10 Mins</item>
        <item>15 Mins</item>
        <item>30 Mins</item>
        <item>45 Mins</item>
        <item>1 Hourr</item>
    </string-array>

    <string-array name="reminder_repeat">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thrusday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="sortby">
        <item>Title Ascending</item>
        <item>Title Descending</item>
        <item>Priorities Low</item>
        <item>Priorities High</item>
        <item>Due Date Earliest</item>
        <item>Due Date Latest</item>
        <item>Default</item>
    </string-array>

    <item name="GroupDefaultcolor" type="color">#CFA1A1 </item>
</resources>