<?xml version="1.0" encoding="utf-8"?>
<!--
    Reference to the given video for making Navigation Drawer
    “Navigation drawer with Fragments Part 1 - youtube.”
    [Online]. Available: https://www.youtube.com/watch?v=fGcMLu1GJEc.
    [Accessed: 11-Mar-2022].
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/HomePage"
        android:icon="@drawable/navigation_home_page"
        android:title="@string/home"/>
    <item
        android:id="@+id/createReminderFragment"
        android:icon="@drawable/navigation_create_page"
        android:title="@string/create"/>
    <item
        android:id="@+id/allReminderPage"
        android:icon="@drawable/navigation_all_page"
        android:title="@string/all_reminder"/>
    <item
        android:id="@+id/completedPage"
        android:icon="@drawable/navigation_complete_page"
        android:title="@string/completes"/>
    <item
        android:id="@+id/deadlinePage"
        android:icon="@drawable/naviagtion_deadline_page"
        android:title="@string/deadlines"/>
    <item
        android:id="@+id/calenderPage"
        android:icon="@drawable/navigation_calendar_page"
        android:title="@string/calender_view"/>
    <item
        android:icon="@drawable/navigation_group_page"
        android:title="@string/groups" />
    <item
        android:id="@+id/settingPage"
        android:icon="@drawable/navigation_setting_page"
        android:title="@string/setting"/>
</menu>
