<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeadlinePage">

    <SearchView
        android:id="@+id/searchDeadlinePageInDeadlinePage"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search for Reminder or Group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/deadlineNameInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/deadlines"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchDeadlinePageInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/completedReminderInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/completed"
        app:layout_constraintEnd_toStartOf="@+id/allReminderInDeadlinePage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineNameInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/allReminderInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="9dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/all"
        app:layout_constraintEnd_toStartOf="@+id/groupsReminderInDeadlinePage"
        app:layout_constraintStart_toEndOf="@id/completedReminderInDeadlinePage"
        app:layout_constraintTop_toBottomOf="@+id/deadlineNameInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/groupsReminderInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/groups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/allReminderInDeadlinePage"
        app:layout_constraintTop_toBottomOf="@+id/deadlineNameInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sortByInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sort_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupsReminderInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addReminderInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginTop="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByInDeadlinePage"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/deleteReminderInDeadlinePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/delete"
        android:layout_marginTop="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByInDeadlinePage"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/listViewDeadlinesInDeadlinePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/allReminderInDeadlinePage"
        app:layout_constraintBottom_toTopOf="@+id/addReminderInDeadlinePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>