<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReminderFragment">
    <!--
        LukapLukap  30.5k6161 gold badges151151 silver badges240240 bronze badges and neworldneworld   7, “How to make the linearlayout in scrollview to fill the whole area,” Stack Overflow, 01-Dec-1960.
        [Online]. Available: https://stackoverflow.com/questions/14837983/how-to-make-the-linearlayout-in-scrollview-to-fill-the-whole-area.
        [Accessed: 24-Mar-2022].
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--
                “TextInputLayout &nbsp;: &nbsp; android developers,” Android Developers.
                [Online]. Available: https://developer.android.com/reference/com/google/android/material/textfield/TextInputLayout.
                [Accessed: 24-Mar-2022].

                D. Lisovyi, “Textinputlayout styling,” Medium, 10-Mar-2020.
                [Online]. Available: https://medium.com/omisoft/textinputlayout-styling-8b36a5e0d73c.
                [AreminderPriorityInCreateReminderccessed: 24-Mar-2022].
            -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_titleInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderTitleInputFieldInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reminder_title_field_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_descriptionInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderDescriptionInputFieldInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/reminder_description_field_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_dateInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderDateInputFieldInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reminder_date_time_field_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_locationInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationInputFieldInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_location" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--
                “Exposed drop-down menu in Android,” GeeksforGeeks, 23-Jun-2021.
                 [Online]. Available: https://www.geeksforgeeks.org/exposed-drop-down-menu-in-android/.
                [Accessed: 23-Mar-2022].
            -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_importanceInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <AutoCompleteTextView
                    android:id="@+id/reminderPriorityInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/add_priority" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--
                Reference for dropdown menu
                Exposed drop-down menu in Android,” GeeksforGeeks, 23-Jun-2021.
                [Online]. Available: https://www.geeksforgeeks.org/exposed-drop-down-menu-in-android/
                [Accessed: 24-Mar-2022].

                ManikandanManikandan 1, “How to select multiple contact in autocompletetextview,” Stack Overflow, 01-Jun-1960.
                [Online]. Available: https://stackoverflow.com/questions/11896844/how-to-select-multiple-contact-in-autocompletetextview.
                [Accessed: 24-Mar-2022].
            -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_repeat_DaysInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <MultiAutoCompleteTextView
                    android:id="@+id/reminderRepeatDaysInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/repeat_days" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_occurrenceInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <MultiAutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/remind_me"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_Group_NameInCreateReminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/add_group_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderGroupNameInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/addhomeButtonInCreateReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <Button
                    android:id="@+id/cancel_buttonInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/home"
                    android:layout_weight="1"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/saveReminderInCreateReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/create"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>